--- a/BitcoinRouletteClient/src/pw/bitcoinroulette/gui/lobby/Lobby.fxml
+++ b/BitcoinRouletteClient/src/pw/bitcoinroulette/gui/lobby/Lobby.fxml
@@ -10,27 +10,59 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="700.0" minWidth="1024.0" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('pw/bitcoinroulette/gui/images/felt.jpg'); -fx-background-color: green;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       
-      <ImageView fitWidth="700" layoutX="150.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="206.0" fitWidth="522.0" layoutX="247.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../images/title_trans.png" />
                                  </image>
                               </ImageView>
-      <HBox layoutX="276.0" layoutY="426.0" prefHeight="102.0" prefWidth="488.0">
+      <TableView layoutX="459.0" layoutY="341.0" prefHeight="329.0" prefWidth="532.0">
+        <columns>
+          <TableColumn prefWidth="161.0" text="Name" />
+          <TableColumn prefWidth="245.0" text="Players" />
+            <TableColumn prefWidth="122.0" text="Join" />
+        </columns>
+      </TableView>
+      <VBox layoutX="91.0" layoutY="432.0" prefHeight="139.0" prefWidth="248.0">
          <children>
-         
-            <Button mnemonicParsing="false" onAction="#login" prefHeight="102.0" prefWidth="218.0" text="Login">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Search for game">
                <font>
-                  <Font size="36.0" />
+                  <Font size="21.0" />
                </font>
-            </Button>
-            <Button mnemonicParsing="false" onAction="#register" prefHeight="102.0" prefWidth="263.0" text="Register">
+            </Text>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <TextField prefHeight="25.0" prefWidth="136.0" />
+                  <Button mnemonicParsing="false" text="Search">
+                     <HBox.margin>
+                        <Insets left="7.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Create game">
                <font>
-                  <Font size="36.0" />
+                  <Font size="21.0" />
                </font>
-               <HBox.margin>
-                  <Insets left="10.0" />
-               </HBox.margin></Button>
+               <VBox.margin>
+                  <Insets top="29.0" />
+               </VBox.margin>
+            </Text>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <TextField prefHeight="25.0" prefWidth="137.0" />
+                  <Button mnemonicParsing="false" text="Create">
+                     <HBox.margin>
+                        <Insets left="7.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
          </children>
-      </HBox>
+      </VBox>
+      <Text fill="WHITE" layoutX="87.0" layoutY="332.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lobby">
+         <font>
+            <Font size="69.0" />
+         </font>
+      </Text>
    </children>
 </Pane>
